# unremark

./: .env.example  .gitignore  Cargo.toml  README.md  training.jsonl
.github/: pull_request_template.md
crates/unremark/: Cargo.toml  README.md  pyproject.toml  requirements.txt
crates/unremark/examples/: example.ts
crates/unremark/src/: analysis.rs  api.rs  comment_detection.rs  constants.rs  lib.rs  main.rs  types.rs  utils.rs
crates/unremark/src/bindings/: mod.rs  python.rs
crates/unremark/src/services/: mod.rs  proxy.rs
crates/unremark_cli/: Cargo.toml
crates/unremark_cli/src/: main.rs
crates/unremark_server/: Cargo.toml
crates/unremark_server/src/: document.rs  main.rs
examples/: example.js  example.py  example.rs
examples/python/: main.py
src/: main.rs
