[package]
name = "unremark"
version = "0.1.0"
edition = "2021"

[dependencies]
tree-sitter = "0.24.7"
tree-sitter-rust = "0.23.0"
tree-sitter-python = "0.23.0"
tree-sitter-javascript = "0.23.0"
tree-sitter-typescript = "0.23.0"
openai_api_rust = "0.1.9"
dotenv = "0.15.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[build-dependencies]
cc="1.2.9"
