[package]
name = "unremark"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "unremark"
path = "src/main.rs"

[dependencies]
tree-sitter = "0.24.7"
tree-sitter-rust = "0.23.0"
tree-sitter-python = "0.23.0"
tree-sitter-javascript = "0.23.0"
tree-sitter-typescript = "0.23.0"
openai_api_rust = "0.1.9"
dotenv = "0.15.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.4", features = ["derive"] }
walkdir = "2.4"
rayon = "1.8"
ignore = "0.4"
toml = "0.8"
colored = "3.0"
indicatif = "0.17"
log = "0.4"
env_logger = "0.11.6"
dirs = "6.0.0"
parking_lot = "0.12"

[build-dependencies]
cc="1.2.9"
