[workspace]
members = [
    "crates/unremark",
    "crates/unremark_server"
]
resolver = "2"

[workspace.dependencies]
unremark = { path = "crates/unremark" }
unremark_server = { path = "crates/unremark_server" }

dotenv = "0.15.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.4", features = ["derive"] }
walkdir = "2.4"
rayon = "1.8"
ignore = "0.4"
toml = "0.8"
colored = "3.0"
indicatif = "0.17"
log = "0.4"
env_logger = "0.11.6"
dirs = "6.0.0"
parking_lot = "0.12"
regex = "1.5"
tokio = { version = "1.0", features = ["full"] }
futures = "0.3"
reqwest = { version = "0.12.12", features = ["json"] }
wiremock = "0.6.0"
