[package]
name = "unremark"
version = "0.1.0"
edition = "2021"
repository = "https://github.com/software-trizzey/unremark"
authors = ["Tristan Deane <tristandeane93@gmail.com>"]
license = "MIT"
readme = "../../README.md"

[lib]
name = "unremark"
path = "src/lib.rs"
crate-type = ["rlib","cdylib"]  # Needed for Python bindings

[features]
python = ["pyo3"]

[dependencies]
async-trait = "0.1"
tree-sitter = "0.24.7"
tree-sitter-rust = "0.23.0"
tree-sitter-python = "0.23.0"
tree-sitter-javascript = "0.23.0"
tree-sitter-typescript = "0.23.0"
pyo3 = { version = "0.23.4", features = ["extension-module"], optional = true }
dotenv = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
walkdir = { workspace = true }
ignore = { workspace = true }
toml = { workspace = true }
colored = { workspace = true }
indicatif = { workspace = true }
log = { workspace = true }
env_logger = { workspace = true }
dirs = { workspace = true }
parking_lot = { workspace = true }
regex = { workspace = true }
tokio = { workspace = true }
futures = { workspace = true }
reqwest = { workspace = true }
wiremock = { workspace = true }

[build-dependencies]
cc="1.2.9"

[dev-dependencies]
tempfile = "3.9"
