[build-system]
requires = ["maturin>=1.8,<2.0", "cffi>=1.15.0"]
build-backend = "maturin"

[project]
name = "unremark"
version = "0.1.0"
requires-python = ">=3.8"
dependencies = ["cffi>=1.15.0"]

# TODO: Optional: Use dynamic versioning instead
# [project]
# name = "unremark"
# dynamic = ["version"]
# requires-python = ">=3.8"
# dependencies = ["cffi>=1.15.0"] 