[package]
name = "unremark_cli"
version = "0.1.0"
edition = "2021"
repository = "https://github.com/software-trizzey/unremark"
authors = ["Tristan Deane <tristandeane93@gmail.com>"]
license = "MIT"
readme = "../../README.md"

[[bin]]
name = "unremark"
path = "src/main.rs"

[dependencies]
unremark = { path = "../unremark" }

dotenv = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
clap = { workspace = true }
walkdir = { workspace = true }
ignore = { workspace = true }
toml = { workspace = true }
colored = { workspace = true }
indicatif = { workspace = true }
log = { workspace = true }
env_logger = { workspace = true }
dirs = { workspace = true }
parking_lot = { workspace = true }
regex = { workspace = true }
tokio = { workspace = true }
futures = { workspace = true }
reqwest = { workspace = true }
wiremock = { workspace = true }

[build-dependencies]
cc="1.2.9"

[dev-dependencies]
tempfile = "3.9"
