[package]
name = "unremark_server"
version = "0.1.0"
edition = "2021"

[dependencies]
unremark = { path = "../unremark" }
tower-lsp = "0.20.0"
dashmap = "6.1.0"

parking_lot = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
log = { workspace = true }
env_logger = { workspace = true }

[dev-dependencies]
futures = "0.3"
tower-lsp = { version = "0.20.0", features = ["proposed"] }
